Quorum/Library/Tests/Expressions/Pass/IsA.quorum
class Main
    action Main
        Main e
        
        output e is Main
    end
end