Quorum/Library/Tests/Expressions/Fail/BlueprintMain.quorum
class Main 
    blueprint action Main
end